--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "add-build": "git add dist"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
