--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,12 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "rootDir": "./src",
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["./api/*.ts","src/**/*"],
   "exclude": ["node_modules"]
 }
