--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./api/*.ts","src/**/*"],
+  "include": ["src/**/*", "index.ts"],
   "exclude": ["node_modules"]
 }
